scrollbar infinitely scrolling bug improvements

--- a/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
+++ b/BlazorTextEditor.RazorLib/wwwroot/blazorTextEditor.css
@@ -113,6 +113,7 @@
 }
 
 .bte_scrollbar-section {
+    overflow: hidden;
     position: sticky;
     top: 0;
     left: 0;
